# Algaber

./: .gitignore  CMakeLists.txt  README.md  block_jacobi_cleaned.txt  build.ps1  matrix.hpp.broken
examples/basic/: basic_matrix.cpp
pseudo_codes/: gqv.pseudo  gqv2.pseudo  gqv3.pseudo  gqv4.pseudo  gqv5.pseudo  gqv6.pseudo  gqv6_1.pseudo  gqv7.pseudo  houseHt.pseudo
src/linear_algebra/: StoragePolicy.hpp  colors.hpp  custom_iterators.hpp  househt2.pseudo  just2.pseudo  justmatrix.hpp  library_config.hpp  matrix.hpp  matrix_error.hpp  matrix_errors_trial.hpp  types.hpp  utils.hpp
tests/: matrix_test.cpp
